Add images. Change ref to header-background. Remove positioning on left and right segments of body! Add footer & footer contentgit status

--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,15 @@
                 <h4 id="sidebarHead">Sidebar Section Heading</h4>
                 <p id="sidebarText">Something incredible is waiting to be known across the centuries Euclid. Two ghostly white figures in coveralls and helmets are soflty dancing intelligent beings stirred by starlight. The only home we've ever known Flatland, galaxies concept of the number one, the ash of stellar alchemy a mote of dust suspended in a sunbeam explorations kindling the energy hidden in matter realm of the galaxies culture, preserve and cherish that <span><a href="www.example.com">pale blue dot</a></span> venture, ship of the imagination radio telescope hundreds of thousands. Extraplanetary Vangelis courage of our questions culture as a patch of light Hypatia network of wormholes encyclopaedia galactica and billions upon billions upon billions upon billions upon billions upon billions upon billions?</p>
             </div>
+            <div id="footer">
+                <h1 id= "footerHeader">
+                    MOST POPULAR POSTS
+                </h1>
+                <a href="www.example.com"><img class="artPics" src="images/article-image-1.jpg"></a>
+                <a href="www.example.com"><img class="artPics" src="images/article-image-2.jpg"></a>
+                <a href="www.example.com"><img class="artPics" src="images/article-image-3.jpg"></a>
+                <a href="http://www.example.com"><img class="artPics" src="images/article-image-4.jpg"></a>
+            </div>
         </div>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
