add nav button content. add mask divs to popular post images.

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,10 @@
         <!-- endbuild -->
 
         <!-- build:css styles/main.css -->
-        <link rel="stylesheet" href="styles/main.css">
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+        <link href="http://fonts.googleapis.com/css?family=Oswald" rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="styles/main.css">          <link rel="stylesheet" type="text/css" href="normalize.css">
+            
         <!-- endbuild -->
 
     </head>
@@ -76,10 +79,30 @@
                 <h1 id= "footerHeader">
                     MOST POPULAR POSTS
                 </h1>
-                <a href="www.example.com"><img class="artPics" src="images/article-image-1.jpg"></a>
-                <a href="www.example.com"><img class="artPics" src="images/article-image-2.jpg"></a>
-                <a href="www.example.com"><img class="artPics" src="images/article-image-3.jpg"></a>
-                <a href="http://www.example.com"><img class="artPics" src="images/article-image-4.jpg"></a>
+                <div>
+                    <div class="mask"></div>
+                    <a href="www.example.com"><img class="artPics" src="images/article-image-1.jpg"></a>
+                    <div class="mask"></div>
+                    <a href="www.example.com"><img class="artPics" src="images/article-image-2.jpg"></a>
+                    <div class="mask"></div>
+                    <a href="www.example.com"><img class="artPics" src="images/article-image-3.jpg"></a>
+                    <div class="mask"></div>
+                    <a href="http://www.example.com"><img class="artPics" src="images/article-image-4.jpg"></a>
+                </div>
+                <div id="footerFooter">
+                    <a href="www.example.com" class="navItem">
+                        Nav Item 1
+                    </a>
+                    <a href="www.example.com" class="navItem">
+                        Nav Item 2
+                    </a>
+                    <a href="www.example.com" class="navItem">
+                        Nav Item 3
+                    </a>
+                    <a href="www.example.com" class="navItem">
+                        Nav Item 4
+                    </a>
+                </div>
             </div>
         </div>
 
