--- a/app/index.html
+++ b/app/index.html
@@ -119,6 +119,7 @@
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
         <script src="bower_components/jquery/dist/jquery.js"></script>
+        <script src="bower_components/hoverintent/jquery.hoverIntent.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
