Some progress with footer. Playing with header

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,8 @@
         <!-- build:css styles/main.css -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
         <link href="http://fonts.googleapis.com/css?family=Oswald" rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="styles/main.css">          <link rel="stylesheet" type="text/css" href="normalize.css">
+        <link rel="stylesheet" href="styles/main.css">       
+        <link rel="stylesheet" type="text/css" href="styles/normalize.css">
             
         <!-- endbuild -->
 
@@ -119,7 +120,7 @@
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
         <script src="bower_components/jquery/dist/jquery.js"></script>
-        <script src="bower_components/hoverintent/jquery.hoverIntent.jsx`"></script>
+        <script src="bower_components/hoverintent/jquery.hoverIntent.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
