--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,7 @@
         <!-- build:css styles/main.css -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
         <link href="http://fonts.googleapis.com/css?family=Oswald" rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="styles/main.css">       
-        <link rel="stylesheet" type="text/css" href="styles/normalize.css">
+        <link rel="stylesheet" href="styles/main.css">          <link rel="stylesheet" type="text/css" href="normalize.css">
             
         <!-- endbuild -->
 
@@ -120,7 +119,7 @@
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
         <script src="bower_components/jquery/dist/jquery.js"></script>
-        <script src="bower_components/hoverintent/jquery.hoverIntent.js"></script>
+        <script src="bower_components/hoverintent/jquery.hoverIntent.jsx`"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
