--- a/app/index.html
+++ b/app/index.html
@@ -52,9 +52,9 @@
                 <p>Hydrogen atoms Drake Equation tesseract realm of the galaxies? Trillion rings of Uranus gathered by gravity as a patch of light intelligent beings radio telescope. White dwarf the only home we've ever known? Dispassionate extraterrestrial observer. Birth emerged into consciousness Vangelis. Shores of the cosmic ocean vastness is bearable only through love extraordinary claims require extraordinary evidence! Concept of the number one the only home we've ever known, rings of Uranus hundreds of thousands Tunguska event concept of the number one billions upon billions. Vastness is bearable only through love Tunguska event not a sunrise but a galaxyrise Cambrian explosion realm of the galaxies permanence of the stars rings of Uranus?</p>
                 <p>Preserve and cherish that pale blue dot a still more glorious dawn awaits not a sunrise but a galaxyrise, Euclid birth, something incredible is waiting to be known explorations! Shores of the cosmic ocean ship of the <span><a href="www.example.com" id="imagLink">imagination</a></span> Sea of Tranquility shores of the cosmic ocean stirred by starlight muse about ship of the imagination! Preserve and cherish that pale blue dot? Made in the interiors of collapsing stars, prime number, laws of physics, birth dispassionate extraterrestrial observer shores of the cosmic ocean, culture, a mote of dust suspended in a sunbeam muse about paroxysm of global death, rings of Uranus. Permanence of the stars rich in heavy atoms network of wormholes and billions upon billions upon billions upon billions upon billions upon billions upon billions?</p>
                 <div id="comLink">
-                    <button><img src="images/icon-comment.png"><a href="www.example.com">Read Comments</a></button>
-                    <button><img src="images/icon-upload.png"><a href="www.example.com">Read Later</a></button>
-                    <button><img src="images/icon-share.png"><a href="www.example.com">Share This Post</a></button>
+                    <a href="www.example.com"><button><img src="images/icon-comment.png">Read Comments</button></a>
+                    <a href="www.example.com"><button><img src="images/icon-upload.png">Read Later</button></a>
+                    <a href="www.example.com"><button><img src="images/icon-share.png">Share This Post</button></a>
                 </div>
             </div>
             <div id="bodyRight">
